techpack: audio: detect variant via defconfig

--- a/techpack/audio/Makefile
+++ b/techpack/audio/Makefile
@@ -31,7 +31,7 @@ else ifeq ($(PROJECT_NAME),$(filter $(PROJECT_NAME),m52xq))
 include $(srctree)/techpack/audio/config/lito_m52.conf
 else ifeq ($(PROJECT_NAME),$(filter $(PROJECT_NAME),gts7xllite gts7xllitewifi))
 include $(srctree)/techpack/audio/config/lito_gts7plite.conf
-else ifeq ($(PROJECT_NAME),$(filter $(PROJECT_NAME),m23xq))
+else ifeq ($(CONFIG_SEC_M23XQ_PROJECT), y)
 include $(srctree)/techpack/audio/config/lito_m23.conf
 else
 include $(srctree)/techpack/audio/config/litoauto.conf
@@ -89,7 +89,7 @@ LINUXINCLUDE    += \
 else ifeq ($(PROJECT_NAME),$(filter $(PROJECT_NAME),gts7xllite gts7xllitewifi))
 LINUXINCLUDE    += \
                 -include $(srctree)/techpack/audio/config/lito_gts7plite.h
-else ifeq ($(PROJECT_NAME),$(filter $(PROJECT_NAME),m23xq))
+else ifeq ($(CONFIG_SEC_M23XQ_PROJECT), y)
 LINUXINCLUDE    += \
                 -include $(srctree)/techpack/audio/config/lito_m23.h
 else
